--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -4470,20 +4470,22 @@ sub,sup {
     z-index: 1;
     text-align: center;
     color: #fff;
-    margin: 50px 50px 300px 50px
+    margin: 50px 100px 70px;
 }
 
 .header .site-title {
     font-size: 50px;
     display: block;
-    line-height: 1;
-    color: #fff
+    line-height: 1.4;
+    color: #fff;
+    margin-bottom: 30px;
 }
 
 @media only screen and (min-width: 768px) {
     .header .site-title {
         margin:0;
-        font-size: 76px
+        margin-bottom: 50px;
+        font-size: 76px;
     }
 }
 
@@ -4492,7 +4494,8 @@ sub,sup {
     display: block;
     line-height: 1;
     color: #fff;
-    margin-top: 10px
+    margin-top: 10px;
+    line-height: 1.6em;
 }
 
 @media only screen and (min-width: 768px) {
