--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -5,7 +5,7 @@
            <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" alt="logo" height="180" width="180">
       </div>
 	  
-      <h1>
+      <h1> thành <h1 class="tanimation keader">
         <span class="site-title">{{ site.title }}</span>
         <span class="site-description">{{ site.description }}</span>
       </h1>
@@ -16,7 +16,7 @@
 </a>  
 	  </div>
 	  
-      <div class="header-icons">
+      <div class="content-logo tanimation kago">
         
         <a aria-label="Send email" href="mailto:lamquangminh10@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/bogotiengvietevkey"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
