--- a/docs/assets/css/main2.css
+++ b/docs/assets/css/main2.css
@@ -1,4 +1,4 @@
- /*!normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css*/
+/*!normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css*/
 @import "https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates|Raleway";@import "https://fonts.googleapis.com/css?family=Fredericka+the+Great|Josefin+Slab|Antic+Slab";button,hr,input {
     overflow: visible
 }
@@ -4470,22 +4470,20 @@ sub,sup {
     z-index: 1;
     text-align: center;
     color: #fff;
-    margin: 50px 100px 70px;
+    margin: 100px 50px
 }
 
 .header .site-title {
     font-size: 50px;
     display: block;
-    line-height: 1.4;
-    color: #fff;
-    margin-bottom: 30px;
+    line-height: 1;
+    color: #fff
 }
 
 @media only screen and (min-width: 768px) {
     .header .site-title {
         margin:0;
-        margin-bottom: 50px;
-        font-size: 76px;
+        font-size: 76px
     }
 }
 
@@ -4494,8 +4492,7 @@ sub,sup {
     display: block;
     line-height: 1;
     color: #fff;
-    margin-top: 10px;
-    line-height: 1.6em;
+    margin-top: 10px
 }
 
 @media only screen and (min-width: 768px) {
@@ -4519,6 +4516,12 @@ sub,sup {
     .header-links .link {
         font-size:20px
     }
+}
+
+.header-icons {
+    display: flex;
+    justify-content: center;
+    text-align: center
 }
 
 .header-icons a {
@@ -4658,205 +4661,4 @@ sub,sup {
     text-decoration: none;
     margin: 0;
     color: #fff
-}
-
-
- .keader {
--webkit-animation: keader 1.4s;
--moz-animation: keader 1.4s;
--ms-animation: keader 1.4s;
--o-animation: keader 1.4s;
-animation: keader 1.4s;
-}
-
-.tanimation {
--webkit-animation-duration: 1s;
-animation-duration: 1s;
--webkit-animation-fill-mode: both;
-animation-fill-mode: both;
-}
-
-@-webkit-keyframes kago {
-0%,
-60%,
-75%,
-90%,
-to {
--webkit-animation-timing-function: cubic-bezier(.200, .60, .340, 1);
-animation-timing-function: cubic-bezier(.200, .60, .340, 1)
-}
-0% {
-opacity: 0;
--webkit-transform: translate3d(0, -2902px, 0);
-transform: translate3d(0, -2902px, 0)
-}
-60% {
-opacity: 1;
--webkit-transform: translate3d(0, 30px, 0);
-transform: translate3d(0, 30px, 0)
-}
-75% {
--webkit-transform: translate3d(0, -15px, 0);
-transform: translate3d(0, -15px, 0)
-}
-90% {
--webkit-transform: translate3d(0, 5px, 0);
-transform: translate3d(0, 5px, 0)
-}
-to {
--webkit-transform: translateZ(0);
-transform: translateZ(0)
-}
-}
-
-@keyframes kago {
-0%,
-60%,
-75%,
-90%,
-to {
--webkit-animation-timing-function: cubic-bezier(.215, .61, .355, 1);
-animation-timing-function: cubic-bezier(.215, .61, .355, 1)
-}
-0% {
-opacity: 0;
--webkit-transform: translate3d(0, -3000px, 0);
-transform: translate3d(0, -3000px, 0)
-}
-60% {
-opacity: 1;
--webkit-transform: translate3d(0, 25px, 0);
-transform: translate3d(0, 25px, 0)
-}
-75% {
--webkit-transform: translate3d(0, -10px, 0);
-transform: translate3d(0, -10px, 0)
-}
-90% {
--webkit-transform: translate3d(0, 5px, 0);
-transform: translate3d(0, 5px, 0)
-}
-to {
--webkit-transform: translateZ(0);
-transform: translateZ(0)
-}
-}
-
-@keyframes keader {
-from {
-opacity: 0;
-}
-to {
-opacity: 1;
-}
-}
-
-@-moz-keyframes keader {
-from {
-opacity: 0;
-}
-to {
-opacity: 1;
-}
-}
-
-@-webkit-keyframes keader {
-from {
-opacity: 0;
-}
-to {
-opacity: 1;
-}
-}
-
-@-ms-keyframes keader {
-from {
-opacity: 0;
-}
-to {
-opacity: 1;
-}
-}
-
-@-o-keyframes keader {
-from {
-opacity: 0;
-}
-to {
-opacity: 1;
-}
-}
-
-.kago {
--webkit-animation-name: kago;
-animation-name: kago
-}
-
-.header-icons {
--webkit-backface-visibility: visible!important;
-backface-visibility: visible!important;
--webkit-animation-name: faded;
-animation-name: faded;
-}
-
-@-webkit-keyframes faded {
-0% {
--webkit-transform: perspective(400px) rotateX(90deg);
-transform: perspective(400px) rotateX(90deg);
--webkit-animation-timing-function: ease-in;
-animation-timing-function: ease-in;
-opacity: 0
-}
-40% {
--webkit-transform: perspective(400px) rotateX(-20deg);
-transform: perspective(400px) rotateX(-20deg);
--webkit-animation-timing-function: ease-in;
-animation-timing-function: ease-in
-}
-60% {
--webkit-transform: perspective(400px) rotateX(10deg);
-transform: perspective(400px) rotateX(10deg);
-opacity: 1
-}
-80% {
--webkit-transform: perspective(400px) rotateX(-5deg);
-transform: perspective(400px) rotateX(-5deg)
-}
-to {
--webkit-transform: perspective(400px);
-transform: perspective(400px)
-}
-}
-
-@keyframes faded {
-0% {
--webkit-transform: perspective(400px) rotateX(90deg);
-transform: perspective(400px) rotateX(90deg);
--webkit-animation-timing-function: ease-in;
-animation-timing-function: ease-in;
-opacity: 0
-}
-40% {
--webkit-transform: perspective(400px) rotateX(-20deg);
-transform: perspective(400px) rotateX(-20deg);
--webkit-animation-timing-function: ease-in;
-animation-timing-function: ease-in
-}
-60% {
--webkit-transform: perspective(400px) rotateX(10deg);
-transform: perspective(400px) rotateX(10deg);
-opacity: 1
-}
-80% {
--webkit-transform: perspective(400px) rotateX(-5deg);
-transform: perspective(400px) rotateX(-5deg)
-}
-to {
--webkit-transform: perspective(400px);
-transform: perspective(400px)
-}
-}
-
-::-webkit-scrollbar {
-display: none;
 }
