--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,27 +1,28 @@
 <div id="particles-js">
   <div class="header">
 
-	<div class="content-logo tanimation kago">
-           <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" alt="logo" height="180" width="180">
-      </div>
-	  
-      <h1 class="tanimation keader">
-        <span class="site-title">{{ site.title }}</span>
-        <span class="site-description">{{ site.description }}</span>
-      </h1>
-	  
-<div class="download" style="margin-top: 54px;margin-bottom: 47px;">
-  <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" rel="nofollow" class="d-flex flex-items-center" style="color: #4dd0e1;border: 2px solid #4dd0e1;text-decoration: none;padding: 9px 18px;font-size: 23px;border-radius: 10px;margin-right: 15px;">
-    <i class="fa fa-windows"></i>&nbsp;&nbsp;<span>For Windows</span></a>
-  <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" rel="nofollow" class="d-flex flex-items-center" style="color: #4dd0e1;border: 2px solid #4dd0e1;text-decoration: none;padding: 9px 18px;font-size: 23px;border-radius: 10px;margin-left: 15px;">
-    <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>For macOS</span></a>
-</div>
-
-	  
-      <div class="header-icons tanimation">
-        
-        <a aria-label="Send email" href="mailto:lamquangminh10@gmail.com"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/bogotiengvietevkey"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
-      </div>
+    <div class="content-logo tanimation kago">
+             <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" alt="logo" height="180" width="180">
+    </div>
+      
+    <h1 class="tanimation keader">
+      <span class="site-title">{{ site.title }}</span>
+      <span class="site-description">{{ site.description }}</span>
+    </h1>
+      
+   <div class="download">
+    <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" title="Tải về cho Windows" rel="nofollow">
+      <i class="fa fa-windows"></i>&nbsp;&nbsp;<span>v3.4.9</span></a>
+    <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKeyMac.zip" title="Tải về cho macOS" rel="nofollow">
+      <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>v3.0.31</span></a>
   </div>
+      
+    <div class="header-icons tanimation">
+
+      <a aria-label="Send email" href="mailto:lamquangminh10@gmail.com"><i class="icon fa fa-envelope"></i></a>
+      <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/bogotiengvietevkey"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+    </div>
+
+  </div>
+
 </div>
