--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,4 +1,4 @@
- /*!normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css*/
+/*!normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css*/
 @import "https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates|Raleway";@import "https://fonts.googleapis.com/css?family=Fredericka+the+Great|Josefin+Slab|Antic+Slab";button,hr,input {
     overflow: visible
 }
@@ -18,9 +18,8 @@ progress,sub,sup {
 
 html {
     line-height: 1.15;
-    height: 100%;
     -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%
 }
 
 body {
@@ -4362,11 +4361,10 @@ summary {
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
     font-size: 100%;
     line-height: 1.5;
     color: #555;
-    font-family: antic slab,serif;
+    font-family: antic slab,serif
 }
 
 article,aside,figcaption,figure,footer,header,nav,section {
@@ -4450,8 +4448,7 @@ sub,sup {
     background: #1a222c;
     display: flex;
     vertical-align: bottom;
-    min-height: 100%;
-    position: relative;
+    min-height: 100vh;
     justify-content: center;
     overflow: auto;
     min-width: 400px;
@@ -4470,22 +4467,25 @@ sub,sup {
     z-index: 1;
     text-align: center;
     color: #fff;
-    margin: 50px 100px 70px;
+    /* position:absolute; */
+    /* top:50%; */
+    /* left:50%; */
+    margin: 100px 50px;
+    /* -webkit-transform:translate(-50%,-50%); */
+    /* transform:translate(-50%,-50%); */
 }
 
 .header .site-title {
     font-size: 50px;
     display: block;
-    line-height: 1.4;
-    color: #fff;
-    margin-bottom: 30px;
+    line-height: 1;
+    color: #fff
 }
 
 @media only screen and (min-width: 768px) {
     .header .site-title {
         margin:0;
-        margin-bottom: 50px;
-        font-size: 76px;
+        font-size: 76px
     }
 }
 
@@ -4494,8 +4494,7 @@ sub,sup {
     display: block;
     line-height: 1;
     color: #fff;
-    margin-top: 10px;
-    line-height: 1.6em;
+    margin-top: 10px
 }
 
 @media only screen and (min-width: 768px) {
@@ -4520,6 +4519,12 @@ sub,sup {
         font-size:20px
     }
 }
+
+/*.header-icons {
+    display: flex;
+    justify-content: center;
+    text-align: center
+}*/
 
 .header-icons a {
     outline: 0!important;
@@ -4661,7 +4666,9 @@ sub,sup {
 }
 
 
- .keader {
+
+
+.keader {
 -webkit-animation: keader 1.4s;
 -moz-animation: keader 1.4s;
 -ms-animation: keader 1.4s;
@@ -4857,6 +4864,75 @@ transform: perspective(400px)
 }
 }
 
-::-webkit-scrollbar {
-display: none;
+/* additional CSS */
+
+.download{
+    margin: 42px 0 22px;
+}
+
+.download a{
+    transition: all .5s;
+    color: #4dd0e1;
+    border: 2px solid #4dd0e1;
+    text-decoration: none;
+    padding: 9px 18px;
+    font-size: 23px;
+    border-radius: 10px;
+    display: inline-block;
+    margin: 0 15px 20px;
+}
+
+.download a:hover{
+    color: #fff;
+    background-color: #0098c7;
+    border-color: #0098c7;
+}
+
+#particles-js{
+    min-width: 240px;
+}
+
+.header{
+    margin: 45px 25px;
+}
+
+.header .site-description{
+    line-height: 1.4;
+}
+
+.keader{
+    margin-top: 0;
+    padding-top: 30px;
+}
+
+.kago img{
+    max-width: 145px;
+    max-height: 145px;
+}
+
+@media (min-width: 768px){
+    .header .site-title{
+        font-size: 64px;
+        padding-bottom: 5px;
+    }
+
+    .header .site-description{
+        font-size: 29px;
+    }
+}
+
+@media (max-width: 414px){
+    .download a{
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+
+    .kago img{
+        max-width: 130px;
+        max-height: 130px;
+    }
+
+    .header{
+        margin: 40px 25px;
+    }
 }
