--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,11 +1,11 @@
-
 <button class="donate_block" onclick="ShowDonate();">Donate</button>
 <div id="donate_links">
   <ul>
     <li><a class="donate_link" href="https://www.paypal.me/lamquangminh" target="_black" rel="noopener">PayPal</a></li>
     <li><a class="donate_link" href="https://unghotoi.com/1565708776nxjgz" target="_black" rel="noopener">UngHoToi</a></li>
-    <li><a id="donate_momo" class="donate_link" href="#">Momo</a></li>
+    <li><a id="donate_momo" class="donate_link" href="#">MoMo</a></li>
     <li><a id="donate_vtpay" class="donate_link" href="#">ViettelPay</a></li>
+    <li><a id="donate_zalopay" class="donate_link" href="#">ZaloPay</a></li>
   </ul>
 </div>
 
@@ -29,6 +29,18 @@
     </div>
     <div class="modal-body">
       <img src="/assets/lqm-vtpay.png">
+    </div>
+  </div>
+</div>
+
+<div id="zalopay_modal" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+      <h3 class="modal_header_text">Bạn hãy quét mã QR bên dưới bằng app ZaloPay</h3>
+    </div>
+    <div class="modal-body">
+      <img src="/assets/lqm-zalopay.png">
     </div>
   </div>
 </div>
@@ -85,6 +97,16 @@
   var modal1 = document.getElementById("vtpay_modal");
   var btn1 = document.getElementById("donate_vtpay");
   var span1 = document.getElementsByClassName("close")[1];
+  btn1.onclick = function() {
+    modal1.classList.add("active");
+  }
+  span1.onclick = function() {
+    modal1.classList.remove("active");
+  }
+
+  var modal2 = document.getElementById("zalopay_modal");
+  var btn2 = document.getElementById("donate_zalopay");
+  var span2 = document.getElementsByClassName("close")[1];
   btn1.onclick = function() {
     modal1.classList.add("active");
   }
