--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -16,7 +16,7 @@
       <h3 class="modal_header_text">Bạn hãy quét mã QR bên dưới bằng app Momo</h3>
     </div>
     <div class="modal-body">
-      <img src="../assets/lqm-momo.png">
+      <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/assets/lqm-momo.png">
     </div>
   </div>
 </div>
@@ -28,7 +28,7 @@
       <h3 class="modal_header_text">Bạn hãy quét mã QR bên dưới bằng app ViettelPay</h3>
     </div>
     <div class="modal-body">
-      <img src="../assets/lqm-vtpay.png">
+      <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/assets/lqm-vtpay.png">
     </div>
   </div>
 </div>
@@ -40,7 +40,7 @@
       <h3 class="modal_header_text">Bạn hãy quét mã QR bên dưới bằng app ZaloPay</h3>
     </div>
     <div class="modal-body">
-      <img src="../assets/lqm-vtpay.png">
+      <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/assets/lqm-vtpay.png">
     </div>
   </div>
 </div>
@@ -111,10 +111,10 @@
   var modal2 = document.getElementById("zalopay_modal");
   var btn2 = document.getElementById("donate_zalopay");
   var span2 = document.getElementsByClassName("close")[1];
-  btn1.onclick = function() {
+  btn2.onclick = function() {
     modal2.classList.add("active");
   }
-  span1.onclick = function() {
+  span2.onclick = function() {
     modal2.classList.remove("active");
   }
 
