--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -13,10 +13,10 @@
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">&times;</span>
-      <h3 class="modal_header_text">Bạn hãy quét mã QR bên dưới bằng app Momo</h3>
+      <h3 class="modal_header_text">Bạn hãy quét mã QR bên dưới bằng app MoMo</h3>
     </div>
     <div class="modal-body">
-      <img src="https://raw.githubusercontent.com/lamquangminh/ev2/master/docs/assets/lqm-momo.png">
+      <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/assets/lqm-momo.png">
     </div>
   </div>
 </div>
@@ -28,7 +28,7 @@
       <h3 class="modal_header_text">Bạn hãy quét mã QR bên dưới bằng app ViettelPay</h3>
     </div>
     <div class="modal-body">
-      <img src="https://raw.githubusercontent.com/lamquangminh/ev2/master/docs/assets/lqm-vtpay.png">
+      <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/assets/lqm-vtpay.png">
     </div>
   </div>
 </div>
@@ -40,7 +40,7 @@
       <h3 class="modal_header_text">Bạn hãy quét mã QR bên dưới bằng app ZaloPay</h3>
     </div>
     <div class="modal-body">
-      <img src="https://raw.githubusercontent.com/lamquangminh/ev2/master/docs/assets/lqm-zalopay.png">
+      <img src="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/assets/lqm-zalopay.png">
     </div>
   </div>
 </div>
